# deepsea

./: .gitignore  Makefile  README.md  language-reference.md
binaries/MacOS/: dsc  dsc_antchain
binaries/linux/: dsc
contracts/: amm-i.wasm  amm-i.wat  amm-r.wasm  amm-r.wat
contracts/amm/: .lia.cache  .nia.cache  .nra.cache  clash.dot  (+4 more)
minic_unittests/: basic_constructor.mc  comments.mc  contracts  declarations.mc  expressions.mc  functions.mc  methods.mc  statements.mc  test_bytecode.sh  test_parse_and_print.sh  unittests
src/: Makefile  README.md  Runtime.v  _CoqProject  _tags  backend.mlpack  dune-project  dune-workspace  myocamlbuild.ml  opam
src/Edsger/: .merlin  abi.ml  abi.mli  ast.ml  ast.mli  astcommon.ml  astcommon.mli  config.h  coqgen.cppo.ml  coqgen.ml  dune  edsger.ml  lexer.mll  make_parser.sh  makefile_model  metadata.ml  minicgen.ml  parser.ml  parser.mli  parser.mly  parsetree.ml  parsetree.mli  typecheck.ml  uclidgen.ml
unittests/: .gitignore  README.md  address_test.js  amm_test.ts  asserts.ds  asserts_test.js  builtins_test.js  builtins_test.ts  chain.ts  clean-json.py  conflux-chain.ts  constructor.ds  constructor2_test.js  constructor_test.js  cut_amm.sh  ethereum-chain.ts  events.ds  events_test.js  events_test.ts  for_test.js  forloop.ds  forloop_test.js  keccak256_test.js  keccak256_test.ts  layers1_test.js  match-int_test.js  package-lock.json  package.json  replace_addresses.sh  run_unittests.sh  start_conflux.sh  struct.ds  struct_test.js  test-unittest  test-unittest.ts  tests.ts  tests.yml  tethys.toml  tsconfig.json  utils.ts
(+509 files in other folders)
